tests/rosetta/out/Haskell/anagrams.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/anagrams.hs:145:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/anagrams.hs:138:1
                 /workspace/mochi/tests/rosetta/out/Haskell/anagrams.hs:145:1
    |
145 | main = do
    | ^^^^
