tests/rosetta/out/Haskell/anagrams.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:15Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isInfixOf, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)

forLoop :: Int -> Int -> (Int -> Maybe a) -> Maybe a
forLoop start end f = go start
  where
    go i
      | i < end =
          case f i of
            Just v -> Just v
            Nothing -> go (i + 1)
      | otherwise = Nothing

whileLoop :: (() -> Bool) -> (() -> Maybe a) -> Maybe a
whileLoop cond body = go ()
  where
    go _
      | cond () =
          case body () of
            Just v -> Just v
            Nothing -> go ()
      | otherwise = Nothing

avg :: (Integral a) => [a] -> a
avg xs
  | null xs = 0
  | otherwise = div (sum xs) (fromIntegral (length xs))

data MGroup k a = MGroup {key :: k, items :: [a]} deriving (Show)

_group_by :: (Ord k) => [a] -> (a -> k) -> [MGroup k a]
_group_by src keyfn =
  let go [] m order = (m, order)
      go (x : xs) m order =
        let k = keyfn x
         in case Map.lookup k m of
              Just is -> go xs (Map.insert k (is ++ [x]) m) order
              Nothing -> go xs (Map.insert k [x] m) (order ++ [k])
      (m, order) = go src Map.empty []
   in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]

_indexString :: String -> Int -> String
_indexString s i =
  let idx = if i < 0 then i + length s else i
   in if idx < 0 || idx >= length s
        then error "index out of range"
        else [s !! idx]

_append :: [a] -> a -> [a]
_append xs x = xs ++ [x]

_input :: IO String
_input = getLine

_readInput :: Maybe String -> IO String
_readInput Nothing = getContents
_readInput (Just p)
  | null p || p == "-" = getContents
  | otherwise = readFile p

_writeOutput :: Maybe String -> String -> IO ()
_writeOutput mp text = case mp of
  Nothing -> putStr text
  Just p
    | null p || p == "-" -> putStr text
    | otherwise -> writeFile p text

_split :: Char -> String -> [String]
_split _ "" = [""]
_split d s =
  let (h, t) = break (== d) s
   in h : case t of
        [] -> []
        (_ : rest) -> _split d rest

_parseCSV :: String -> Bool -> Char -> [Map.Map String String]
_parseCSV text header delim =
  let ls = filter (not . null) (lines text)
   in if null ls
        then []
        else
          let heads =
                if header
                  then _split delim (head ls)
                  else ["c" ++ show i | i <- [0 .. length (_split delim (head ls)) - 1]]
              start = if header then 1 else 0
              row line =
                let parts = _split delim line
                 in Map.fromList
                      [ (heads !! j, if j < length parts then parts !! j else "")
                        | j <- [0 .. length heads - 1]
                      ]
           in map row (drop start ls)

data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)

_asInt :: AnyValue -> Int
_asInt (VInt n) = n
_asInt v = error ("expected int, got " ++ show v)

_asDouble :: AnyValue -> Double
_asDouble (VDouble d) = d
_asDouble v = error ("expected double, got " ++ show v)

_asString :: AnyValue -> String
_asString (VString s) = s
_asString v = error ("expected string, got " ++ show v)

_asBool :: AnyValue -> Bool
_asBool (VBool b) = b
_asBool v = error ("expected bool, got " ++ show v)

_showAny :: AnyValue -> String
_showAny (VInt n) = show n
_showAny (VDouble d) = show d
_showAny (VString s) = s
_showAny (VBool b) = if b then "true" else "false"

sortRunes :: String -> String
sortRunes s =
  fromMaybe ("") $
    (let arr = [] in (let i = 0 in case whileLoop (\() -> (_asInt (i) < length s)) (\() -> (let arr = (arr ++ [take ((_asInt (i) + 1) - i) (drop i s)]) in (let i = (_asInt (i) + 1) in Nothing))) of Just v -> Just v; Nothing -> (let n = length arr in (let m = 0 in case whileLoop (\() -> (m < n)) (\() -> (let j = 0 in case whileLoop (\() -> ((j < n) - 1)) (\() -> case if ((arr !! j) > (arr !! (_asInt (j) + 1))) then (let tmp = (arr !! j) in (let arr = Map.insert j (arr !! (_asInt (j) + 1)) arr in (let arr = Map.insert (_asInt (j) + 1) tmp arr in Nothing))) else Nothing of Just v -> Just v; Nothing -> (let j = (_asInt (j) + 1) in Nothing)) of Just v -> Just v; Nothing -> (let m = (_asInt (m) + 1) in Nothing))) of Just v -> Just v; Nothing -> (let out = "" in (let i = 0 in case whileLoop (\() -> (i < n)) (\() -> (let out = (out + (arr !! i)) in (let i = (_asInt (i) + 1) in Nothing))) of Just v -> Just v; Nothing -> Just (out)))))))

sortStrings :: [String] -> [String]
sortStrings xs =
  fromMaybe ([]) $
    (let res = [] in (let tmp = xs in case whileLoop (\() -> (length tmp > 0)) (\() -> (let min = (tmp !! 0) in (let idx = 0 in (let i = 1 in case whileLoop (\() -> (_asInt (i) < length tmp)) (\() -> case if ((tmp !! i) < min) then (let min = (tmp !! i) in (let idx = i in Nothing)) else Nothing of Just v -> Just v; Nothing -> (let i = (_asInt (i) + 1) in Nothing)) of Just v -> Just v; Nothing -> (let res = (res ++ [min]) in (let out = [] in (let j = 0 in case whileLoop (\() -> (_asInt (j) < length tmp)) (\() -> case if (j /= idx) then (let out = (out ++ [(tmp !! j)]) in Nothing) else Nothing of Just v -> Just v; Nothing -> (let j = (_asInt (j) + 1) in Nothing)) of Just v -> Just v; Nothing -> (let tmp = out in Nothing)))))))) of Just v -> Just v; Nothing -> Just (res)))

main :: ()
main =
  fromMaybe (()) $
    (let words = ["abel", "able", "bale", "bela", "elba", "alger", "glare", "lager", "large", "regal", "angel", "angle", "galen", "glean", "lange", "caret", "carte", "cater", "crate", "trace", "elan", "lane", "lean", "lena", "neal", "evil", "levi", "live", "veil", "vile"] in (let groups = Map.fromList [] in (let maxLen = 0 in case foldr (\w acc -> case (let k = sortRunes w in case if _asBool (not (elem k groups)) then (let groups = Map.insert k [w] groups in Nothing) else (let groups = Map.insert k ((groups !! k) ++ [w]) groups in Nothing) of Just v -> Just v; Nothing -> if (length (groups !! k) > _asInt (maxLen)) then (let maxLen = length (groups !! k) in Nothing) else Nothing) of Just v -> Just v; Nothing -> acc) Nothing words of Just v -> Just v; Nothing -> (let printed = Map.fromList [] in foldr (\w acc -> case (let k = sortRunes w in if (length (groups !! k) == _asInt (maxLen)) then if _asBool (not (elem k printed)) then (let g = sortStrings (groups !! k) in (let line = ("[" + (g !! 0)) in (let i = 1 in case whileLoop (\() -> (_asInt (i) < length g)) (\() -> (let line = ((line + " ") + (g !! i)) in (let i = (_asInt (i) + 1) in Nothing))) of Just v -> Just v; Nothing -> (let line = (line + "]") in case (let _ = putStrLn (_showAny (line)) in Nothing) of Just v -> Just v; Nothing -> (let printed = Map.insert k True printed in Nothing))))) else Nothing else Nothing) of Just v -> Just v; Nothing -> acc) Nothing words))))
  where
    words = ["abel", "able", "bale", "bela", "elba", "alger", "glare", "lager", "large", "regal", "angel", "angle", "galen", "glean", "lange", "caret", "carte", "cater", "crate", "trace", "elan", "lane", "lean", "lena", "neal", "evil", "levi", "live", "veil", "vile"]

main :: IO ()
main = do
  main
